--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   project:
     image: node:alpine3.11
     build: .
-    working_dir: /usr/src/app/project
+    working_dir: /usr/src/app/
     volumes:
-      - ./project:/usr/src/app/project
+      - ./dashboard:/usr/src/app/
     environment:
       NODE_ENV: development
     command: npm run start
